--- a/content/posts/2024/11/2024-11-22-Gi-Commit-Message-規範.mdx
+++ b/content/posts/2024/11/2024-11-22-Gi-Commit-Message-規範.mdx
@@ -2,13 +2,15 @@
 category: Code
 title: Git Commit Message 規範
 date: 2024-11-22
-description: 這篇介紹了 Git Commit Message 的格式規範，包括標題、正文和尾注的結構，並提供了常見的提交類型和示例，幫助開發者撰寫清晰且有意義的提交消息。
+description: 剛開始寫程式的時候，我的 commit 訊息都很隨便，直到被同事念了幾次才知道原來有規範。這篇整理了我學到的 Git Commit Message 寫法，分享給跟我一樣剛入門的朋友。
 tags: ['Git']
 image: /blog/posts/2024/11/git-commit-message.png
 slug: git-commit-message
 ---
 
-這篇介紹了 Git Commit Message 的格式規範，包括標題、正文和尾注的結構，並提供了常見的提交類型和示例，幫助開發者撰寫清晰且有意義的提交消息
+說實話，剛開始寫程式的時候，我的 commit 訊息都很隨便，什麼 "fix bug"、"update"、"test" 這種毫無意義的訊息滿天飛。直到被資深同事念了幾次，我才知道原來寫 commit 訊息也有學問。
+
+經過幾個月的實際使用，我整理了這套規範，現在團隊合作時大家都能清楚知道每次 commit 到底改了什麼。
 
 ## 基本格式
 
@@ -20,76 +22,87 @@ slug: git-commit-message
 <footer>
 ```
 
-## 格式說明
+## 為什麼要這樣寫？
 
-commit message 由三個主要部分組成：
+以前我都覺得這樣寫很麻煩，直到有一次要找三個月前的某個功能修改，翻了半天 commit 歷史都不知道是哪一個。那時候我就體會到好的 commit 訊息有多重要了。
 
-1. **標題（header）**
-2. **正文（body）**
-3. **尾注（footer）**
+Commit message 其實就三個部分：
 
-## 標題組成
+1. **標題（header）** - 快速說明這次改了什麼
+2. **正文（body）** - 詳細解釋為什麼要改
+3. **尾注（footer）** - 關閉相關的 issue
 
-標題包含三個部分：
+## 標題怎麼寫
 
-- **類型**（type）- 必填
-- **範圍**（scope）- 可選
-- **主題**（subject）- 必填
+標題包含三個部分，其中前兩個最重要：
+
+- **類型**（type）- 必填，告訴別人這是什麼類型的修改
+- **範圍**（scope）- 可選，修改的範圍
+- **主題**（subject）- 必填，簡單說明做了什麼
 
 ## Type 類型對照表
 
-| 類型     | 說明                                   |
-| -------- | -------------------------------------- |
-| feat     | 新功能                                 |
-| fix      | 修復 bug                               |
-| docs     | 文檔變更                               |
-| style    | 格式（不影響代碼運行的變動）           |
-| refactor | 重構（既不是新增功能，也不是修復 bug） |
-| test     | 增加測試                               |
-| chore    | 構建過程或輔助工具的變動               |
-| perf     | 性能優化、改善功能                     |
-| build    | 建構程序或外部依賴的變動               |
-| ci       | 持續集成相關的變動                     |
-| revert   | 撤銷先前的提交                         |
-| merge    | 合併分支                               |
+這個表格是我常用的分類，基本上涵蓋了日常開發的所有情況：
 
-## 範例
+| 類型     | 說明                           |
+| -------- | ------------------------------ |
+| feat     | 新功能（這個最常用）           |
+| fix      | 修復 bug                       |
+| docs     | 只改文件，沒動程式碼           |
+| style    | 改格式、縮排這些不影響功能的   |
+| refactor | 重構代碼，沒加新功能也沒修 bug |
+| test     | 加測試或改測試                 |
+| chore    | 改建構流程、更新套件這些雜事   |
+| perf     | 性能優化                       |
+| build    | 改建構系統或外部依賴           |
+| ci       | 改 CI/CD 設定                  |
+| revert   | 取消之前的 commit              |
+| merge    | 合併分支                       |
+
+## 實際範例
 
 ```bash
 feat(search): add fuzzy search to the search bar
 
-This commit adds a fuzzy search algorithm to the search bar,
-which allows users to search for terms that are similar to the ones they type in.
+用戶反映搜尋功能不夠聰明，常常找不到想要的結果。
+這次加入模糊搜尋，即使打錯字也能找到相關內容。
 
 Closes #1234
 ```
 
-## 撰寫原則
+## 我的實戰經驗
 
-### 標題
+### 標題寫法
 
-- **type**: 必須是上述其中一個類型。
-- **scope**: 可選，用於說明 commit 影響的範圍（例如：**ui**、**api**）。
-- **subject**: 簡短描述，清楚表達這次改動做了什麼，建議不超過 50 個字符。
+- **type**: 一定要準確，別偷懶都寫 feat
+- **scope**: 不確定就不寫，總比寫錯好
+- **subject**: 用動詞開頭，像是 "add"、"fix"、"update"，不要超過 50 個字
 
-### 正文
+### 正文什麼時候寫
 
-- **可選**，但建議在需要詳細說明時使用。
-- 用於解釋這次改動的詳細原因和影響，建議使用簡潔的語言。
-- 若需換行，請空一行後再寫。
+一開始我都不寫正文，但後來發現有些改動真的需要解釋。特別是那些「為什麼要這樣改」的原因，未來的自己會感謝現在多寫的這幾行字。
 
-### 尾注
+### 尾注的用途
 
-- **可選**，通常用於關聯 issue 編號。
-- 可以註明關閉的 issue：**Closes #123** 或 **Fixes #123**。
+主要是關聯 issue，像是 `Closes #123` 或 `Fixes #456`。這樣 GitHub 會自動關閉對應的 issue，很方便。
 
-### 常見錯誤
+## 常見的坑
 
-- **不清晰的標題**：標題應該簡潔明了，避免使用模糊的描述。
-- **缺少正文**：如果改動較大，應該在正文中詳細說明。
-- **不一致的格式**：保持一致的提交格式有助於團隊協作。
+### 標題太模糊
 
-### 最佳實踐
+❌ 壞例子：`fix stuff`、`update code`
+✅ 好例子：`fix: resolve memory leak in user cache`
 
-- 使用命令行工具或 Git GUI 工具來撰寫提交消息，這樣可以避免格式錯誤。
-- 在撰寫提交消息之前，先思考這次改動的目的和影響，這樣可以幫助你更清晰地表達。
+### 忘記寫正文
+
+如果這次修改很重要或是邏輯比較複雜，一定要在正文說明。別讓未來的自己（或同事）猜謎。
+
+### 格式不一致
+
+我們團隊曾經因為每個人都有自己的寫法，結果 commit 歷史看起來亂七八糟。統一格式真的很重要。
+
+## 實用工具推薦
+
+我現在都用 VS Code 的 Git 介面寫 commit，有些團隊會用 Commitizen 這類工具來強制格式。如果你們團隊還沒有統一的工具，建議可以試試看。
+
+寫好的 commit 訊息不只是為了別人，更是為了未來的自己。相信我，三個月後回來看，你會感謝現在多花的這點時間。
