--- a/content/posts/2024/12/2024-12-05-發布NPM.mdx
+++ b/content/posts/2024/12/2024-12-05-發布NPM.mdx
@@ -2,101 +2,256 @@
 category: Code
 title: 發布 NPM 套件指南
 date: 2024-12-05
-description: 本文介紹如何建立和發布 NPM 套件，包含套件開發、測試、發布流程等完整說明。
+description: 第一次發布 NPM 套件的時候超緊張，深怕搞壞什麼東西。結果其實沒那麼可怕！這篇分享我從零開始發布套件的完整流程，包括那些我踩過的坑。
 tags: ['NPM', 'Node.js', 'JavaScript', 'Package Management', 'Development']
 image: /blog/posts/2024/12/npm.webp
 slug: publish-npm-package-guide
 ---
 
-## 初始化項目
+## 為什麼要發布自己的 NPM 套件？
 
-要開始創建一個 NPM 套件，首先需要初始化一個新的項目。這可以通過以下命令完成：
+說實話，以前我都覺得發布 NPM 套件是大神才做的事。直到我寫了一個自己常用的工具函數，每次新專案都要複製貼上，才想說不如做成套件。
+
+結果發現其實沒那麼難！而且有幾個好處：
+
+- **重複使用**：一次開發，到處使用
+- **版本管理**：不用每次都複製程式碼
+- **分享給社群**：說不定能幫到其他人
+- **履歷加分**：開源貢獻總是好事
+
+## 初始化專案
+
+首先建立一個新資料夾，然後初始化：
 
 ```bash
+mkdir my-awesome-package
+cd my-awesome-package
 npm init
 ```
 
-如果只是想要快速建立一個 **package.json** 檔案，可以使用：
+如果想要快速建立，可以用：
 
 ```bash
 npm init -y
 ```
 
-### **package.json** 的基本資訊範例
+## package.json 的關鍵設定
 
-- **package name (名稱)**：**taiwan-number-format**
-- **version (版本)**：可以從 **1.0.0** 開始
-- **description (描述)**：將數字轉換為繁體中文的套件
-- **entry point (入口點)**：通常是主要程式碼檔案的路徑，例如 **index.js**
-- **test command (測試命令)**：用於執行測試的命令，如果有的話
-- **git repository (Git 儲存庫)**：如果你將程式碼存儲在 Git 中，填寫你的 Git 儲存庫網址
-- **keywords (關鍵字)**：描述套件的關鍵字，例如 **taiwan, number, format, chinese**
-- **author (作者)**：填寫你的名字或組織
-- **license (授權)**：根據偏好，選擇一個適合套件的授權類型，如 MIT、Apache-2.0、ISC 等
-
-以下是一個 **package.json** 的範例：
+這是我發布套件時的 package.json 範例：
 
 ```json title="package.json"
 {
     "name": "chinese-number-format",
     "version": "1.0.2",
-    "description": "中文數字轉換Chinese numeral conversion",
-    "main": "dist/index.js", // 入口
-    "types": "dist/index.d.ts", // 使用 TypeScript 的定義文件
+    "description": "中文數字轉換工具",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
+        "build": "tsc",
         "test": "jest"
     },
     "repository": {
         "type": "git",
         "url": "https://github.com/garylin0969/chinese-number-format.git"
     },
-    "keywords": ["台灣", "中華民國"],
+    "keywords": ["中文", "數字", "轉換", "台灣"],
     "author": {
         "name": "GaryLin",
-        "email": "xxxxxx@gmail.com"
+        "email": "gary@example.com"
     },
-    "license": "ISC",
-    "devDependencies": {
-        "@types/jest": "^29.5.11",
-        "jest": "^29.7.0",
-        "ts-jest": "^29.1.1",
-        "typescript": "^5.3.3"
-    }
+    "license": "MIT"
 }
 ```
 
-## 使用 TypeScript
+### 重要欄位說明
 
-如果你的套件使用 TypeScript，首先需要安裝 TypeScript：
+- **name**: 套件名稱，要是唯一的（去 npmjs.com 確認沒被用過）
+- **version**: 版本號，遵循 semantic versioning
+- **description**: 簡短說明，會出現在搜尋結果
+- **main**: 進入點檔案
+- **keywords**: 關鍵字，幫助別人找到你的套件
+- **repository**: GitHub 連結，讓人知道原始碼在哪
+
+## 使用 TypeScript 開發
+
+我建議用 TypeScript 開發，提供型別定義會讓用戶體驗更好：
 
 ```bash
 npm install typescript --save-dev
-```
-
-然後初始化 TypeScript 配置：
-
-```bash
 npx tsc --init
 ```
 
-這將在根目錄創建一個 tsconfig.json 文件。以下是 **tsconfig.json** 的基本資訊範例：
+我的 tsconfig.json 設定：
 
 ```json title="tsconfig.json"
 {
     "compilerOptions": {
         "target": "es2016",
         "module": "commonjs",
-        "outDir": "./dist", // 指定編譯後的 JavaScript 文件輸出目錄為 dist
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
+        "outDir": "./dist",
+        "declaration": true,
         "strict": true,
-        "moduleResolution": "node",
-        "declaration": true, // 生成 .d.ts 文件
-        "skipLibCheck": true
+        "esModuleInterop": true
     },
-    "include": [
-        "src/**/*.ts" // 設定 TypeScript 源碼的位置
-    ],
-    "exclude": ["node_modules"] // 不需要編譯的文件
+    "include": ["src/**/*.ts"],
+    "exclude": ["node_modules", "dist"]
 }
 ```
+
+## 實際開發套件
+
+假設我要做一個簡單的工具函數：
+
+```typescript title="src/index.ts"
+/**
+ * 將數字轉換為中文
+ * @param num 要轉換的數字
+ * @returns 中文數字字串
+ */
+export function numberToChinese(num: number): string {
+    const digits = ['零', '一', '二', '三', '四', '五', '六', '七', '八', '九'];
+    const units = ['', '十', '百', '千', '萬'];
+
+    if (num === 0) return '零';
+
+    // 簡化版實作，實際會更複雜
+    return num
+        .toString()
+        .split('')
+        .map((d) => digits[parseInt(d)])
+        .join('');
+}
+```
+
+## 測試很重要
+
+```bash
+npm install jest @types/jest ts-jest --save-dev
+```
+
+```typescript title="src/index.test.ts"
+import { numberToChinese } from './index';
+
+describe('numberToChinese', () => {
+    test('基本轉換', () => {
+        expect(numberToChinese(123)).toBe('一二三');
+        expect(numberToChinese(0)).toBe('零');
+    });
+});
+```
+
+## 建置套件
+
+```bash
+npm run build
+```
+
+這會產生 `dist` 資料夾，裡面有編譯後的 JS 檔案和型別定義檔。
+
+## 發布前的檢查
+
+### 1. 測試本地安裝
+
+```bash
+npm pack
+```
+
+這會產生一個 `.tgz` 檔案，你可以在其他專案裡測試：
+
+```bash
+npm install ../my-package/my-package-1.0.0.tgz
+```
+
+### 2. 確認檔案內容
+
+```bash
+npm publish --dry-run
+```
+
+這會顯示將要發布的檔案清單，確認沒有包含不該包含的檔案。
+
+## 註冊 NPM 帳號並發布
+
+### 1. 註冊帳號
+
+去 [npmjs.com](https://www.npmjs.com) 註冊帳號。
+
+### 2. 本地登入
+
+```bash
+npm login
+```
+
+### 3. 發布套件
+
+```bash
+npm publish
+```
+
+第一次發布可能會很緊張，但其實就這麼簡單！
+
+## 我踩過的坑
+
+### 1. 套件名稱衝突
+
+我一開始取的名稱已經被用了，所以要記得先去 npmjs.com 搜尋確認。
+
+### 2. 忘記建置就發布
+
+發布前一定要記得 `npm run build`，不然用戶安裝到的是原始碼。
+
+### 3. .gitignore 和 .npmignore 搞混
+
+記住：
+
+- `.gitignore` 控制什麼不要上傳到 Git
+- `.npmignore` 控制什麼不要發布到 NPM
+
+### 4. 版本號忘記更新
+
+每次發布前記得更新版本號，或使用：
+
+```bash
+npm version patch  # 1.0.0 → 1.0.1
+npm version minor  # 1.0.0 → 1.1.0
+npm version major  # 1.0.0 → 2.0.0
+```
+
+## 維護和更新
+
+### 發布新版本
+
+```bash
+# 更新版本號
+npm version patch
+
+# 發布
+npm publish
+```
+
+### 廢棄舊版本
+
+如果某個版本有問題：
+
+```bash
+npm deprecate my-package@1.0.0 "這個版本有 bug，請使用 1.0.1"
+```
+
+## 最佳實踐
+
+1. **寫好 README**：這是用戶看到的第一印象
+2. **提供型別定義**：TypeScript 用戶會感謝你
+3. **寫測試**：確保品質，也讓別人敢用
+4. **遵循語義化版本**：破壞性變更要升 major 版本
+5. **及時回應 issue**：維護開源專案的責任
+
+## 推廣你的套件
+
+- 在 GitHub README 加上安裝說明
+- 寫部落格文章介紹
+- 在相關社群分享
+- 收集用戶反饋持續改進
+
+發布第一個 NPM 套件真的很有成就感！雖然一開始會緊張，但其實過程很簡單。最重要的是解決實際問題，哪怕只是一個小工具，只要有用就值得分享。
+
+有任何問題歡迎討論！
