--- a/content/posts/2025/02/2025-02-06-AI串接指南-以Perplexity為例.mdx
+++ b/content/posts/2025/02/2025-02-06-AI串接指南-以Perplexity為例.mdx
@@ -2,76 +2,300 @@
 category: Code
 title: AI 串接指南 - 以 Perplexity 為例
 date: 2025-02-06
-description: Perplexity 是一個由 AI 聊天機器人驅動的研究和對話搜尋引擎，透過自然語言處理技術來回答查詢。它於 2022 年推出，使用來自網路的資源生成答案，並在回應文本中引用相關連結。
+description: 最近 AI 工具越來越火，我也想在專案裡串接看看。試了幾個 API 後發現 Perplexity 挺不錯的，不只回答準確，還會自動引用來源。分享一下我的串接經驗和踩過的坑。
 tags: ['AI', 'Perplexity', 'API Integration', 'NLP', 'ChatBot']
 image: /blog/posts/2025/02/perplexity.jpeg
 slug: ai-integration-guide-perplexity-api
 ---
 
+## 為什麼我選擇 Perplexity？
+
+最近 AI 工具真的很火，ChatGPT、Claude、Gemini 各種選擇。我原本想用 OpenAI API，但發現 Perplexity 有個很棒的特點：它會自動引用網路來源，回答比較有憑據。
+
+特別是做資訊查詢功能的時候，用戶能看到資料來源會更有信任感。而且 Perplexity 的搜尋能力真的很強，常常能找到最新的資訊。
+
 ## 什麼是 Perplexity？
 
-Perplexity 是一個由 AI 聊天機器人驅動的研究和對話搜尋引擎，透過自然語言處理技術來回答查詢。它於 2022 年推出，使用來自網路的資源生成答案，並在回應文本中引用相關連結。
+簡單說，Perplexity 就是一個會搜尋網路的 AI 助手。它於 2022 年推出，主要特色是：
 
-### 註冊帳號與設置 API
+- **即時搜尋**：會從網路上找最新資訊
+- **自動引用**：回答會附上來源連結
+- **對話式**：可以連續對話，有上下文理解
+- **多語言**：支援中文等多種語言
 
-1. **註冊帳號**
-   訪問 Perplexity 平台並創建帳號。
-2. **綁定信用卡**
-   此步驟不會扣款，只是存儲 API 使用的付款資訊。
-3. **生成 API Key**
-   API Key 是長期使用的訪問令牌，可持續使用直到手動刷新或刪除。
+對開發者來說，最吸引我的是它的 API 很好用，而且回應品質穩定。
 
-## 如何呼叫 API
+## 開始前的準備工作
 
-### API
+### 1. 註冊帳號
 
-- **URL**: https://api.perplexity.ai/chat/completions
-- **Method**: POST
-- **Headers**:
-    ```json
-    {
-        "Authorization": "Bearer <token>",
-        "Content-Type": "application/json"
-    }
-    ```
-- **Request Body**:
-    ```json
-    {
-        "model": "sonar",
-        "messages": [
-            { "role": "system", "content": "Be precise and concise." },
-            { "role": "user", "content": "How many stars are there in our galaxy?" }
+去 [Perplexity](https://www.perplexity.ai) 註冊一個帳號。
+
+### 2. 綁定信用卡
+
+這步驟不會馬上扣款，只是為了之後使用 API。我用了幾個月，花費其實不多。
+
+### 3. 生成 API Key
+
+在設定頁面生成 API Key，這個 Key 可以長期使用，記得好好保存。
+
+## API 基本使用
+
+### 基本呼叫方式
+
+```javascript
+const response = await fetch('https://api.perplexity.ai/chat/completions', {
+    method: 'POST',
+    headers: {
+        Authorization: `Bearer ${API_KEY}`,
+        'Content-Type': 'application/json',
+    },
+    body: JSON.stringify({
+        model: 'sonar',
+        messages: [
+            { role: 'system', content: '請用繁體中文回答，並保持簡潔' },
+            { role: 'user', content: '最新的 JavaScript 框架趨勢是什麼？' },
         ],
-        "max_tokens": "Optional",
-        "temperature": 0.2,
-        "top_p": 0.9,
-        "search_domain_filter": ["perplexity.ai"],
-        "return_images": false,
-        "return_related_questions": false,
-        "search_recency_filter": "month",
-        "top_k": 0,
-        "stream": false,
-        "presence_penalty": 0,
-        "frequency_penalty": 1,
-        "response_format": null
+        temperature: 0.2,
+        max_tokens: 500,
+    }),
+});
+
+const data = await response.json();
+console.log(data.choices[0].message.content);
+```
+
+## 實際整合到專案
+
+### React 組件範例
+
+我做了一個簡單的搜尋組件：
+
+```jsx
+import { useState } from 'react';
+
+const PerplexitySearch = () => {
+    const [query, setQuery] = useState('');
+    const [result, setResult] = useState('');
+    const [loading, setLoading] = useState(false);
+
+    const searchWithPerplexity = async () => {
+        if (!query.trim()) return;
+
+        setLoading(true);
+        try {
+            const response = await fetch('/api/perplexity', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ question: query }),
+            });
+
+            const data = await response.json();
+            setResult(data.answer);
+        } catch (error) {
+            console.error('搜尋失敗:', error);
+        } finally {
+            setLoading(false);
+        }
+    };
+
+    return (
+        <div>
+            <input
+                type="text"
+                value={query}
+                onChange={(e) => setQuery(e.target.value)}
+                placeholder="問我任何問題..."
+                onKeyPress={(e) => e.key === 'Enter' && searchWithPerplexity()}
+            />
+            <button onClick={searchWithPerplexity} disabled={loading}>
+                {loading ? '搜尋中...' : '搜尋'}
+            </button>
+            {result && (
+                <div style={{ marginTop: '20px', padding: '15px', border: '1px solid #ccc' }}>
+                    <div dangerouslySetInnerHTML={{ __html: result }} />
+                </div>
+            )}
+        </div>
+    );
+};
+```
+
+### Next.js API Route
+
+```javascript
+// pages/api/perplexity.js (或 app/api/perplexity/route.js)
+export default async function handler(req, res) {
+    if (req.method !== 'POST') {
+        return res.status(405).json({ error: 'Method not allowed' });
     }
-    ```
 
-## Perplexity API 參數測試工具
+    const { question } = req.body;
 
-在開始串接之前，我開發了一個方便的工具來測試 Perplexity API 的各種參數：
+    try {
+        const response = await fetch('https://api.perplexity.ai/chat/completions', {
+            method: 'POST',
+            headers: {
+                Authorization: `Bearer ${process.env.PERPLEXITY_API_KEY}`,
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({
+                model: 'sonar',
+                messages: [
+                    {
+                        role: 'system',
+                        content: '請用繁體中文回答，並在回答中包含相關的來源連結',
+                    },
+                    { role: 'user', content: question },
+                ],
+                temperature: 0.3,
+                max_tokens: 1000,
+            }),
+        });
+
+        const data = await response.json();
+        const answer = data.choices[0].message.content;
+
+        res.status(200).json({ answer });
+    } catch (error) {
+        console.error('Perplexity API 錯誤:', error);
+        res.status(500).json({ error: '搜尋服務暫時無法使用' });
+    }
+}
+```
+
+## 參數調整技巧
+
+我花了不少時間調整這些參數，分享一下心得：
+
+### temperature (創造性)
+
+- `0.1-0.3`: 回答比較精準，適合資訊查詢
+- `0.5-0.7`: 回答比較有創意，適合創作類任務
+- `0.8+`: 回答很有創意但可能不太準確
+
+### max_tokens (回應長度)
+
+- `100-300`: 簡短回答
+- `500-1000`: 一般詳細度
+- `1000+`: 很詳細的回答
+
+### search_recency_filter (時效性)
+
+- `hour`: 只搜尋一小時內的資訊
+- `day`: 一天內
+- `week`: 一週內
+- `month`: 一個月內
+
+## 我踩過的坑
+
+### 1. API Key 洩漏
+
+一開始我把 API Key 寫在前端，結果很快就被濫用了。記住一定要放在後端！
+
+### 2. 回應格式不穩定
+
+Perplexity 的回答格式有時會變，要做好錯誤處理：
+
+```javascript
+try {
+    const data = await response.json();
+    const answer = data.choices?.[0]?.message?.content || '無法取得回應';
+    return answer;
+} catch (error) {
+    return '服務暫時無法使用，請稍後再試';
+}
+```
+
+### 3. 中文回應品質
+
+一開始回答都是英文，後來在 system message 裡明確要求用繁體中文，效果好很多。
+
+### 4. 費用控制
+
+沒注意到 token 消耗，一個月下來花了不少錢。建議設定使用上限。
+
+## 實用技巧分享
+
+### 1. 快取常見問題
+
+```javascript
+const cache = new Map();
+
+const searchWithCache = async (question) => {
+    // 檢查快取
+    if (cache.has(question)) {
+        return cache.get(question);
+    }
+
+    // 呼叫 API
+    const result = await callPerplexityAPI(question);
+
+    // 存入快取（限制快取大小）
+    if (cache.size >= 100) {
+        const firstKey = cache.keys().next().value;
+        cache.delete(firstKey);
+    }
+    cache.set(question, result);
+
+    return result;
+};
+```
+
+### 2. 結合搜尋關鍵字優化
+
+```javascript
+const optimizeQuery = (userQuery) => {
+    // 加上時間限定詞
+    if (userQuery.includes('最新') || userQuery.includes('現在')) {
+        return `${userQuery} 2024 2025`;
+    }
+
+    // 加上地區限定詞
+    if (userQuery.includes('台灣') || userQuery.includes('臺灣')) {
+        return `${userQuery} Taiwan 繁體中文`;
+    }
+
+    return userQuery;
+};
+```
+
+### 3. 多語言支援
+
+```javascript
+const getSystemPrompt = (language) => {
+    const prompts = {
+        'zh-TW': '請用繁體中文回答，並提供相關來源',
+        'zh-CN': '請用简体中文回答，并提供相关来源',
+        en: 'Please answer in English and provide relevant sources',
+        ja: '日本語で回答し、関連する情報源を提供してください',
+    };
+
+    return prompts[language] || prompts['en'];
+};
+```
+
+## 成本估算
+
+我用了幾個月的經驗：
+
+- **輕度使用** (每天 10-20 次查詢): 約 $5-10/月
+- **中度使用** (每天 50-100 次查詢): 約 $20-30/月
+- **重度使用** (每天 200+ 次查詢): $50+/月
+
+比 OpenAI 稍微便宜一點，而且搜尋功能很實用。
+
+## 我做的測試工具
+
+為了方便測試不同參數，我做了一個簡單的測試工具：
 [Perplexity API 參數測試工具](https://garylin0969-perplexity-concat.vercel.app/)
 
-這個工具可以讓您：
+可以即時調整參數看效果，對新手很有幫助。
 
-- 直觀地設定各種 API 參數
-- 即時查看 API 的回傳結果
-- 使用中文介面，輕鬆理解每個參數的作用
-- 快速測試不同參數組合的效果
+## 總結
 
-## 參考來源
+Perplexity API 真的很適合需要即時資訊的應用。雖然一開始會踩一些坑，但整體使用體驗很不錯。特別是它的搜尋能力和來源引用功能，讓 AI 回答更有可信度。
 
-- **[取得 API Key](https://docs.perplexity.ai/guides/getting-started)**
-- **[模型資訊](https://docs.perplexity.ai/guides/model-cards)**
-- **[價格說明](https://docs.perplexity.ai/guides/pricing)**
-- **[API 參考文件](https://docs.perplexity.ai/api-reference/chat-completions)**
+如果你也在考慮串接 AI 服務，Perplexity 是個不錯的選擇。記得做好錯誤處理和成本控制就好！
+
+有任何問題歡迎討論！
