--- a/content/posts/2025/02/2025-02-12-多國語言支持指南-使用next-intl在Next.js中實現國際化.mdx
+++ b/content/posts/2025/02/2025-02-12-多國語言支持指南-使用next-intl在Next.js中實現國際化.mdx
@@ -2,64 +2,78 @@
 category: Code
 title: 多國語言支持指南 - 使用 next-intl 在 Next.js 中實現國際化
 date: 2025-02-12
-description: 本文介紹如何在 Next.js 應用中使用 next-intl 來實現多國語言支持，涵蓋安裝、配置及基本使用方法，讓初學者也能輕鬆上手。
+description: 做了一個台灣的產品，結果用戶要求要有英文版。我第一次做國際化真的很頭痛，試了幾個方案後發現 next-intl 最好用。分享一下我從零開始實現多語言支援的完整過程。
 tags: ['Next.js', 'Internationalization', 'i18n', 'next-intl', 'Frontend']
 image: /blog/posts/2025/02/next-intl.png
 slug: nextjs-internationalization-guide-next-intl
 ---
 
+## 為什麼我需要做國際化？
+
+原本我的專案只有中文版，結果產品上線後有用戶問能不能提供英文版。我心想：「多語言不就是翻譯一下文字嗎？」
+
+結果一研究才發現，國際化(i18n)要考慮的東西超多：
+
+- 文字翻譯當然是基本的
+- URL 路由要支援語言切換
+- 日期時間格式不同國家不一樣
+- 數字顯示格式也有差異
+- 甚至連文字方向都可能不同
+
+試了幾個方案後，發現 **next-intl** 最適合 Next.js 的 App Router，設定簡單又功能完整。
+
 ## 什麼是 next-intl？
 
-**next-intl** 是一個專為 Next.js 設計的國際化（i18n）解決方案，它整合了 Next.js 的 App Router，讓開發者能夠輕鬆地為应用添加多語言支持。透過 **next-intl**，可以使用動態路由或子域名路由來管理不同語言的內容，並提供豐富的本地化功能，如翻譯管理、日期和時間格式化等。
+**next-intl** 是專門為 Next.js 設計的國際化解決方案，跟 Next.js 13+ 的 App Router 整合得很好。
 
-## 為什麼選擇 next-intl？
+**為什麼選擇它？**
 
-- **簡單易用**：與 Next.js 無縫集成，設定與使用都非常直觀。
-- **高效性能**：支持靜態渲染和服務器端渲染，確保應用性能。
-- **靈活配置**：支持多種路由策略，包括前綴路由和域名路由。
-- **豐富功能**：內建翻譯、日期時間格式化、數字格式化等多種本地化功能。
+- **無縫整合**：跟 Next.js 配合得天衣無縫
+- **效能優秀**：支援 SSG 和 SSR，不影響載入速度
+- **路由靈活**：可以用 /en/about 或 en.example.com 這種方式
+- **功能豐富**：不只翻譯，連日期、數字格式化都內建
 
-## 如何在 Next.js 中設置 next-intl
+最重要的是文件清楚，新手也很容易上手！
 
-以下是使用 **next-intl** 在 Next.js 中實現國際化的步驟：
+## 開始設定 next-intl
 
-### 1. 安裝 next-intl
-
-首先，確保您已經有一個使用 App Router 的 Next.js 應用。然後，運行以下命令來安裝 **next-intl**：
+### 1. 安裝套件
 
 ```bash
 npm install next-intl
 ```
 
-### 2. 配置文件結構
+### 2. 建立檔案結構
 
-按照 **next-intl** 的推薦，創建以下文件結構：
+我建議按照這個結構來組織：
 
 ```plaintext
-├── messages
+├── messages/          # 翻譯文件
 │   ├── en.json
 │   └── zh-TW.json
-├── next.config.mjs
-└── src
-    ├── i18n
-    │   ├── routing.ts
-    │   └── request.ts
-    ├── middleware.ts
-    └── app
-        └── [locale]
-            ├── layout.tsx
-            └── page.tsx
+├── src/
+│   ├── i18n/
+│   │   ├── routing.ts    # 路由設定
+│   │   └── request.ts    # 請求設定
+│   ├── middleware.ts     # 中間件
+│   └── app/
+│       └── [locale]/     # 動態語言路由
 ```
 
-### 3. 創建翻譯文件
+### 3. 建立翻譯檔案
 
-在 **messages** 資料夾中，為每種語言創建對應的 JSON 文件。例如，**en.json** 和 **zh-TW.json**：
+先建立最基本的翻譯文件：
 
 ```json title="messages/en.json"
 {
     "HomePage": {
-        "title": "Hello World!",
-        "about": "Go to the about page"
+        "title": "Welcome to my website",
+        "description": "This is a multilingual website",
+        "nav": {
+            "home": "Home",
+            "about": "About",
+            "contact": "Contact"
+        }
     }
 }
 ```
@@ -67,32 +81,18 @@ npm install next-intl
 ```json title="messages/zh-TW.json"
 {
     "HomePage": {
-        "title": "你好，世界！",
-        "about": "前往關於頁面"
+        "title": "歡迎來到我的網站",
+        "description": "這是一個多語言網站",
+        "nav": {
+            "home": "首頁",
+            "about": "關於我們",
+            "contact": "聯絡我們"
+        }
     }
 }
 ```
 
-### 4. 配置 **next.config.mjs**
-
-設置 **next-intl** 插件以提供請求特定的 i18n 配置：
-
-```typescript title="src/app/layout.tsx"
-import createNextIntlPlugin from 'next-intl/plugin';
-
-const withNextIntl = createNextIntlPlugin();
-
-/** @type {import('next').NextConfig} */
-const nextConfig = {
-    // 其他 Next.js 配置
-};
-
-export default withNextIntl(nextConfig);
-```
-
-### 5. 配置路由
-
-在 **src/i18n/routing.ts** 中定義支持的語言和默認語言：
+### 4. 設定路由配置
 
 ```typescript title="src/i18n/routing.ts"
 import { createNavigation } from 'next-intl/navigation';
@@ -100,15 +100,13 @@ import { defineRouting } from 'next-intl/routing';
 
 export const routing = defineRouting({
     locales: ['en', 'zh-TW'],
-    defaultLocale: 'en',
+    defaultLocale: 'zh-TW', // 我的網站主要面向台灣用戶
 });
 
 export const { Link, redirect, usePathname, useRouter, getPathname } = createNavigation(routing);
 ```
 
-### 6. 設置中間件
-
-在 **src/middleware.ts** 中設置中間件以處理語言協商和路由重寫：
+### 5. 設定中間件
 
 ```typescript title="src/middleware.ts"
 import createMiddleware from 'next-intl/middleware';
@@ -121,9 +119,7 @@ export const config = {
 };
 ```
 
-### 7. 配置請求
-
-在 **src/i18n/request.ts** 中設置請求配置，以便在服務器組件中使用本地化訊息：
+### 6. 設定請求配置
 
 ```typescript title="src/i18n/request.ts"
 import { getRequestConfig } from 'next-intl/server';
@@ -132,6 +128,7 @@ import { routing } from './routing';
 export default getRequestConfig(async ({ requestLocale }) => {
     let locale = await requestLocale;
 
+    // 確保語言是支援的
     if (!locale || !routing.locales.includes(locale as any)) {
         locale = routing.defaultLocale;
     }
@@ -143,9 +140,24 @@ export default getRequestConfig(async ({ requestLocale }) => {
 });
 ```
 
-### 8. 配置布局
+## 修改 Next.js 設定
 
-在 **src/app/[locale]/layout.tsx** 中配置 **NextIntlClientProvider** 以提供翻譯訊息給客戶端組件：
+```typescript title="next.config.ts"
+import createNextIntlPlugin from 'next-intl/plugin';
+
+const withNextIntl = createNextIntlPlugin();
+
+/** @type {import('next').NextConfig} */
+const nextConfig = {
+    // 你原本的設定
+};
+
+export default withNextIntl(nextConfig);
+```
+
+## 建立多語言頁面
+
+### Layout 設定
 
 ```typescript title="src/app/[locale]/layout.tsx"
 import { NextIntlClientProvider } from 'next-intl';
@@ -153,100 +165,253 @@ import { getMessages } from 'next-intl/server';
 import { notFound } from 'next/navigation';
 import { routing } from '@/i18n/routing';
 
+export function generateStaticParams() {
+    return routing.locales.map((locale) => ({ locale }));
+}
+
 export default async function LocaleLayout({
-  children,
-  params: { locale }
+    children,
+    params: { locale }
 }: {
-  children: React.ReactNode;
-  params: { locale: string };
+    children: React.ReactNode;
+    params: { locale: string };
 }) {
-  if (!routing.locales.includes(locale as any)) {
-    notFound();
-  }
+    // 檢查語言是否支援
+    if (!routing.locales.includes(locale as any)) {
+        notFound();
+    }
 
-  const messages = await getMessages();
+    const messages = await getMessages();
 
-  return (
-    <html lang={locale}>
-      <body>
-        <NextIntlClientProvider messages={messages}>
-          {children}
-        </NextIntlClientProvider>
-      </body>
-    </html>
-  );
+    return (
+        <html lang={locale}>
+            <body>
+                <NextIntlClientProvider messages={messages}>
+                    {children}
+                </NextIntlClientProvider>
+            </body>
+        </html>
+    );
 }
 ```
 
-### 9. 配置頁面
-
-在 **src/app/[locale]/page.tsx** 中使用 **useTranslations** 來顯示翻譯內容：
+### 主頁面
 
 ```typescript title="src/app/[locale]/page.tsx"
 import { useTranslations } from 'next-intl';
 import { Link } from '@/i18n/routing';
 
 export default function HomePage() {
-  const t = useTranslations('HomePage');
-  return (
-    <div>
-      <h1>{t('title')}</h1>
-      <Link href="/about">{t('about')}</Link>
-    </div>
-  );
+    const t = useTranslations('HomePage');
+
+    return (
+        <div>
+            <nav>
+                <Link href="/">{t('nav.home')}</Link>
+                <Link href="/about">{t('nav.about')}</Link>
+                <Link href="/contact">{t('nav.contact')}</Link>
+            </nav>
+
+            <main>
+                <h1>{t('title')}</h1>
+                <p>{t('description')}</p>
+            </main>
+        </div>
+    );
 }
 ```
 
-### 10. 設置靜態參數
+## 建立語言切換器
 
-為了支持靜態渲染，添加 **generateStaticParams** 函數：
+這是用戶最關心的功能：
 
-```typescript title="src/app/[locale]/layout.tsx"
-import { routing } from '@/i18n/routing';
-import { setRequestLocale } from 'next-intl/server';
-import { notFound } from 'next/navigation';
+```typescript title="src/components/LanguageSwitcher.tsx"
+'use client';
 
-export function generateStaticParams() {
-  return routing.locales.map((locale) => ({ locale }));
-}
+import { useLocale } from 'next-intl';
+import { useRouter, usePathname } from '@/i18n/routing';
 
-export default async function LocaleLayout({ children, params: { locale } }) {
-  if (!routing.locales.includes(locale as any)) {
-    notFound();
-  }
+export default function LanguageSwitcher() {
+    const locale = useLocale();
+    const router = useRouter();
+    const pathname = usePathname();
 
-  setRequestLocale(locale);
+    const languages = [
+        { code: 'zh-TW', name: '繁體中文' },
+        { code: 'en', name: 'English' }
+    ];
 
-  const messages = await getMessages();
+    const handleLanguageChange = (newLocale: string) => {
+        router.replace(pathname, { locale: newLocale });
+    };
 
-  return (
-    <html lang={locale}>
-      <body>
-        <NextIntlClientProvider messages={messages}>
-          {children}
-        </NextIntlClientProvider>
-      </body>
-    </html>
-  );
+    return (
+        <select
+            value={locale}
+            onChange={(e) => handleLanguageChange(e.target.value)}
+            className="border rounded px-3 py-1"
+        >
+            {languages.map((lang) => (
+                <option key={lang.code} value={lang.code}>
+                    {lang.name}
+                </option>
+            ))}
+        </select>
+    );
 }
 ```
 
-### 11. 更新 metadata
+## 進階功能
 
-確保每個頁面的 metadata 支持多語言：
+### 日期時間格式化
+
+```typescript
+import { useFormatter } from 'next-intl';
+
+export default function DateExample() {
+    const format = useFormatter();
+    const now = new Date();
+
+    return (
+        <div>
+            <p>日期: {format.dateTime(now, {
+                year: 'numeric',
+                month: 'long',
+                day: 'numeric'
+            })}</p>
+        </div>
+    );
+}
+```
+
+### 數字格式化
+
+```typescript
+import { useFormatter } from 'next-intl';
+
+export default function NumberExample() {
+    const format = useFormatter();
+    const price = 1234.56;
+
+    return (
+        <div>
+            <p>價格: {format.number(price, {
+                style: 'currency',
+                currency: 'TWD'
+            })}</p>
+        </div>
+    );
+}
+```
+
+### 帶變數的翻譯
+
+```json title="messages/zh-TW.json"
+{
+    "UserProfile": {
+        "welcome": "歡迎回來，{name}！",
+        "itemCount": "您有 {count} 個商品"
+    }
+}
+```
+
+```typescript
+const t = useTranslations('UserProfile');
+
+// 使用方式
+<p>{t('welcome', { name: '小明' })}</p>
+<p>{t('itemCount', { count: 5 })}</p>
+```
+
+## 我踩過的坑
+
+### 1. 靜態生成設定錯誤
+
+一開始我忘記加 `generateStaticParams`，結果 build 的時候出錯。記得要加這個函數。
+
+### 2. 翻譯文件結構混亂
+
+剛開始翻譯文件都放在同一層，後來內容多了很難管理。建議一開始就用巢狀結構。
+
+### 3. 路由跳轉用錯 Link
+
+要用 next-intl 提供的 Link，不是 Next.js 原生的，不然會丟失語言資訊。
+
+### 4. 環境變數沒設定
+
+在伺服器端使用某些功能時需要設定 `NEXT_LOCALE`，我忘記了結果在 production 出問題。
+
+## 部署注意事項
+
+### Vercel 部署
+
+在 `vercel.json` 中加入：
+
+```json
+{
+    "functions": {
+        "app/[locale]/route.ts": {
+            "maxDuration": 10
+        }
+    }
+}
+```
+
+### 環境變數
+
+```bash
+# .env.local
+NEXT_PUBLIC_DEFAULT_LOCALE=zh-TW
+```
+
+## SEO 優化
+
+別忘記設定每個語言的 metadata：
 
 ```typescript title="src/app/[locale]/page.tsx"
 import { getTranslations } from 'next-intl/server';
 
-export async function generateMetadata({ params: { locale } }) {
-    const t = await getTranslations({ locale, namespace: 'Metadata' });
+export async function generateMetadata({ params: { locale } }: { params: { locale: string } }) {
+    const t = await getTranslations({ locale, namespace: 'HomePage' });
 
     return {
         title: t('title'),
+        description: t('description'),
     };
 }
 ```
 
-## 參考來源
+## 維護建議
 
-- **[next-intl 官方文檔](https://next-intl.dev/docs/getting-started/app-router/with-i18n-routing)**
+### 翻譯文件管理
+
+我建議用這種方式組織翻譯：
+
+```json
+{
+    "common": {
+        "buttons": {
+            "save": "儲存",
+            "cancel": "取消"
+        }
+    },
+    "pages": {
+        "home": { ... },
+        "about": { ... }
+    }
+}
+```
+
+### 翻譯工作流程
+
+1. 開發時先用英文佔位符
+2. 功能完成後再找人翻譯
+3. 用 TypeScript 確保翻譯 key 的正確性
+
+## 總結
+
+next-intl 真的讓 Next.js 的國際化變得簡單很多。雖然一開始設定會花一些時間，但是一旦設定好，後續加語言或修改翻譯都很方便。
+
+特別推薦給需要做多語言網站的朋友，比起其他解決方案，next-intl 的開發體驗真的好很多！
+
+有任何問題歡迎討論，我也還在學習更多進階功能中！
